@@ -3,8 +3,8 @@ Title: Datasets and Functions to Benchmark Neural Network Packages
 Description: Datasets and functions to benchmark (convergence, speed, ease of use) R packages dedicated to regression with neural networks (no classification in this version). The templates for the tested packages are available in R, Rmd and html formats at <https://github.com/pkR-pkR/NNbenchmarkTemplates> and <https://akshajverma.com/NNbenchmarkWeb>.
 Imports: R6, pkgload
 Suggests: brnn, validann
-Version: 2.3.6
-Date: 2020-01-11
+Version: 2.3.7
+Date: 2020-06-19
 License: GPL-2
 Maintainer: Patrice Kiener <fattailsr@inmodelia.com>
 Author: Patrice Kiener [aut, cre],
@@ -14,4 +14,4 @@ Author: Patrice Kiener [aut, cre],
 Encoding: UTF-8
 NeedsCompilation: no
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.0
