@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+export(NNSummary)
 export(NNdataSummary)
 export(add2csv)
 export(cc)
@@ -7,7 +8,9 @@ export(clearNN)
 export(createTimer)
 export(detachNN)
 export(funMAE)
+export(funMSE)
 export(funRMSE)
+export(funWAE)
 export(getTimer)
 export(ht)
 export(ht9)
